--- a/src/scss/components/_main-section.scss
+++ b/src/scss/components/_main-section.scss
@@ -175,3 +175,10 @@
 .row-notes__active {
   margin-left: 230px;
 }
+
+
+@media  screen and (max-width: 530px){
+  .row-notes__active {
+    margin-left: 0;
+  }
+}
